# FullFlow

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: check.yml  release.yml
docs/: system_reference.md
examples/: heat_exchanger.py  mixture_splitter.py  model_comparison.py  pump_fed_engine.py
examples/general/: 0state_basics.py  10generate_map_axes.py  11generate_map_metadata.py  1state_bounds_tracking.py  2balance_basic.py  3balance_multiple.py  4composition_mixer.py  5composition_splitter.py  6lookup_function.py  7lookup_class_chaining.py  8map_manual.py  9map_hdf5.py
examples/plotting/: 0generate_plotting_data.py  0inspect_hdf5.py  10log_color_map.py  10multidimensional_slices.py  11show_multiple_figures.py  12light_theme.py  13module_level_api.py  14save_formats.py  1inspect_hdf5.py  1single_trace.py  2multiple_traces.py  2single_trace.py  3dual_axis.py  3multiple_traces.py  4dual_axis.py  4heatmap_from_1d_datasets.py  5heatmap_2d_dataset.py  5log_axes.py  6heatmap_stacked_1d.py  6multidimensional_dataset.py  7log_axes.py  7show_multiple_figures.py  8light_theme.py  8log_color_map.py  9module_level_api.py  9multidimensional_line_traces.py  README.md
examples/steady_state/: 0function_lookup.py  10turbopump.py  11equilibrium_nozzle.py  1simple_pipe.py  2compressible_flow.py  2node_pressure.py  3custom_component.py  4cavitating_venturi.py  4compressible_flow.py  5custom_component.py  6cavitating_venturi.py  7heat_exchanger.py  8flow_splitter.py  8turbopump.py  9equilibrium_nozzle.py  9flow_mixer.py  node_pressure.py  pressurized_tank.py  simple_pipe.py  vent_system.py
examples/testing/: 1test_data_anchoring.py  2sensor_events.py  3sequences_and_commands.py
examples/transient/: 0balances_intro.py  10custom_component.py  11heat_transfer.py  12heat_exchanger.py  13force_steady_heat_transfer.py  14force_steady_fluid.py  15piston_cylinder.py  16balloon.py  17relief_valve.py  18combustion_nozzle.py  19cavitating_venturi.py  1simple_pipe.py  20gas_turbine.py  21heatsink_tca.py  22water_hammer.py  23pid_throttle.py  23sensor_test_data_balance.py  24sudden_valve_opening.py  25engine_startup.py  2bang_bang_control.py  2node_inertia.py  2shock_tube.py  3shock_tube.py  3water_hammer.py  4copv_blowdown.py  5bang_bang_control.py  6pump_transient.py  7flow_mixer.py  8flow_splitter.py  9model_options.py  sudden_valve_closure.py
src/fullflow/: Exceptions.py  HDF5.py  __init__.py  plotting.py
src/fullflow/Exports/: EXPORTS.md  HDF5.py  Maps.py  README.md  __init__.py
src/fullflow/Plotting/: PLOTTING.md  __init__.py  fullplot.py  themes.py
src/fullflow/Solvers/: STEADY_STATE_SOLVER.md  SteadyState.py  TRANSIENT_SOLVER.md  Transient.py  __init__.py  balance_filtering.py  equations.py
src/fullflow/Solvers/steady_state/: __init__.py  diagnostics.py  evaluation.py  models.py  operations.py  results.py  runtime.py  settings.py  solver.py  statistics.py
src/fullflow/Solvers/transient/: __init__.py  diagnostics.py  evaluation.py  models.py  operations.py  results.py  runtime.py  schedules.py  settings.py  solver.py
src/fullflow/System/: Balance.py  Component.py  Composition.py  Model.py  Network.py  SYSTEM.md  State.py  __init__.py  protocols.py
src/fullflow/System/Components/: Actuators.py  Composition.py  CompressibleFlow.py  Controllers.py  ConvectionCoefficients.py  FrictionFactors.py  GeneralFlow.py  HeatTransfer.py  Lookup.py  Maps.py  Nodes.py  Pumps.py  RocketPerformance.py  Schedule.py  Sensor.py  Sequence.py  Turbomachinery.py  __init__.py  _flow_math.py
src/fullflow/System/Components/Branches/: CompressibleFlow.py  ConvectionCoefficients.py  DarcyWeisbach.py  DischargeCoefficient.py  FrictionFactors.py  HeatTransfer.py  Nozzles.py  Pumps.py  Regulators.py  Turbines.py  _flow_math.py
src/fullflow/System/Components/Lookups/: CallableLookup.py  CombustionLookup.py  FluidUtilities.py  IdealGasLookups.py  MaterialLookups.py  PropellantLookups.py  RealFluidLookups.py  __init__.py
src/fullflow/System/Components/Nodes/: Boundaries.py  CombustionChambers.py  Junctions.py  Solids.py  Tanks.py  Volumes.py  __init__.py
src/fullflow/System/Components/Sensors/: PressureTransducers.py  Thermocouples.py
src/fullflow/Utilities/: RocketCEAUtilities.py
tests/: test_component_constructor_cleanup.py  test_discrete_state.py  test_hdf5_export.py  test_ignore_balances.py  test_imports.py  test_maps_hdf5.py  test_model_template_api.py  test_sensor.py  test_sequence_condition_commands.py  test_transient_predictor_fast_path.py
