[project]
name = "fullflow"
version = "2.0.0"
description = "Python-native fluid, thermal, propulsion, control, and transient network simulation."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Saaketh Ramoju", email = "skramoju@gmail.com" }
]
requires-python = ">=3.11"

keywords = [
    "fluid-dynamics",
    "fluid-network",
    "network-analysis",
    "thermodynamics",
    "thermal-analysis",
    "heat-transfer",
    "propulsion",
    "rocket-propulsion",
    "rocket-engine",
    "compressible-flow",
    "turbomachinery",
    "control-systems",
    "transient-simulation",
    "simulation",
    "engineering",
    "scientific-computing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "rich>=13.7",
    "h5py>=3.10",
    "fullplot>=0.1.0",
]

[project.optional-dependencies]
thermo = [
    "thermoprop>=2.0.0",
]
examples = [
    "thermoprop>=2.0.0",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/saakethramoju/FullFlow"
Repository = "https://github.com/saakethramoju/FullFlow"
Issues = "https://github.com/saakethramoju/FullFlow/issues"
Changelog = "https://github.com/saakethramoju/FullFlow/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/fullflow/"

[project.scripts]
fullflow = "fullflow:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "THIRD_PARTY_LICENSES.md",
    "PUBLISHING.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "CITATION.cff",
    "docs/**",
    "examples/**",
    "tests/**",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "build>=1.2",
    "twine>=5.0",
]
